all changes are applied

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+@theme {
+    --color-accent: #faB12f;
+    --color-primary: #fef3e2;
+    --color-secondary: #393e46;
+
+}
+  
