complete login page

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @theme {
-    --color-accent: #faB12f;
+    --color-accent: #76153C;
     --color-primary: #fef3e2;
     --color-secondary: #393e46;
 
